--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -9,7 +9,7 @@
     tools:context=".Calendar">
 
     <ImageView
-        android:id="@+id/taskDetailBackButton"
+        android:id="@+id/goBackHome"
         android:layout_width="65dp"
         android:layout_height="65dp"
         app:srcCompat="@drawable/ic_back" />
@@ -37,12 +37,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:capitalize="words"
             android:fontFamily="@font/oswald"
-            android:text="Feb 2021"
+            android:text="FEB 2021"
             android:textAlignment="center"
             android:textColor="#6f5642"
             android:textSize="34sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textAllCaps="true" />
 
         <Button
             android:layout_width="0dp"
