--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     tools:context=".Settings">
 
     <RelativeLayout
-        android:id="@+id/aboutRelativeLayout"
+        android:id="@+id/notificationRelativeLayout"
         android:layout_width="379dp"
         android:layout_height="67dp"
         android:layout_marginStart="16dp"
@@ -16,7 +16,7 @@
         android:background="#F4F4F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notificationRelativeLayout">
+        app:layout_constraintTop_toBottomOf="@+id/aboutRelativeLayout">
 
         <ImageView
             android:id="@+id/imageView6"
@@ -46,7 +46,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/notificationRelativeLayout"
+        android:id="@+id/aboutRelativeLayout"
         android:layout_width="379dp"
         android:layout_height="67dp"
         android:layout_marginStart="16dp"
