--- a/app/src/main/res/layout/activity_notification_details.xml
+++ b/app/src/main/res/layout/activity_notification_details.xml
@@ -6,4 +6,82 @@
     android:layout_height="match_parent"
     tools:context=".NotificationDetails">
 
+    <TextView
+        android:id="@+id/textView36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="144dp"
+        android:fontFamily="@font/oswald"
+        android:text="Today Objective"
+        android:textColor="#6f5642"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/taskFragmentButton"
+        android:layout_width="205dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="11dp"
+        android:background="#CC6B49"
+        android:fontFamily="@font/roboto"
+        android:stateListAnimator="@null"
+        android:text="Task"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView36" />
+
+    <Button
+        android:id="@+id/eventFragmentButton"
+        android:layout_width="205dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="2dp"
+        android:background="#F1F1F1"
+        android:fontFamily="@font/roboto"
+        android:stateListAnimator="@null"
+        android:text="Event"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView36" />
+
+    <Button
+        android:id="@+id/dunSlackButton"
+        android:layout_width="183dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="114dp"
+        android:layout_marginEnd="114dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/btn_bg"
+        android:fontFamily="@font/roboto"
+        android:padding="12dp"
+        android:text="Don't Slack !"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/notificationFrameLayout"
+        android:layout_width="409dp"
+        android:layout_height="649dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskFragmentButton">
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
